@@ -22,6 +22,7 @@
  - added italian language (lupin)
  - fixed display problem (alain/goffy)
  - fixed problem with redirect after posting comments (lupin/goffy)
+ - fixed bug with deleting albums in admin area (goffy)
 
 <h5>1.13 RC1</h5>  [2019/../..]
 <hr>
